# testcicdexternal

./: pyproject.toml  setup.py
test_cicd_external/: __init__.py
